# claude-code-openai-server

./: .env.example  .gitignore  README.md  bench-baseline.json  conftest.py  pyproject.toml
.hermes/plans/: 2026-06-23_optimize-cci-server-latency.md
app/: __init__.py  claude_session.py  config.py  conversation.py  errors.py  events.py  main.py  mcp_bridge.py  openai_models.py  textfilter.py  timing.py  translate.py  warmpool.py
app/routes/: chat.py  compat.py  health.py  models.py
scripts/: bench.py
tests/: test_auth.py  test_claude_session.py  test_compat.py  test_conversation.py  test_events.py  test_textfilter.py  test_translate.py  test_warmpool.py
tests/scripts/: curl_nostream.sh  curl_stream.sh  e2e_autonomous.py  e2e_tool.py  probe_mcp.py  smoke_session.py
